--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -101,10 +101,11 @@ main {
     max-width: 1140px;
     margin: 0 auto;
 }
-
+section{
+    margin-top: 130px;
+}
 /* about section styles */
 .about {
-    margin-top: 130px;
     background: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
@@ -112,8 +113,8 @@ main {
 }
 
 .section-title {
-
-    margin-bottom: 30px;
+    text-align: center;
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
 }
@@ -143,3 +144,51 @@ main {
     font-size: 20px;
     color: #474747;
 }
+
+/* what i do styles */
+
+
+.what-i-do .section-description {
+    margin-top: 30px;
+    font-weight: 400;
+    font-size: 18px;
+    color: #757575;
+    text-align: center;
+    padding: 0 130px;
+}
+
+.skill {
+    background: #FFFFFF;
+    -webkit-box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    padding: 30px;
+}
+
+.skills-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 24px;
+    margin-top: 50px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    color: #181818;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description {
+    font-weight: 400;
+    font-size: 18px;
+    color: #757575;
+}
+
+/* Resume style */
