--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -45,8 +45,8 @@ nav {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    margin: 0 230px;
-    padding: 50px 0;
+    
+    padding: 50px 200px;
 }
 
 .nav-title {
